# FastAPI

./: README.md
fastapi-assignment/: pyproject.toml
fastapi-assignment/app/: main.py
fastapi-assignment/app/configs/: base.py
fastapi-assignment/app/dependencies/: auth.py
fastapi-assignment/app/models/: movies.py  users.py
fastapi-assignment/app/routers/: movies.py  users.py
fastapi-assignment/app/schemas/: movies.py  users.py
fastapi-assignment/app/utils/: file.py
movie_review_app/: aerich.ini  pyproject.toml
movie_review_app/app/: main.py
movie_review_app/app/configs/: database.py
movie_review_app/app/models/: base.py  likes.py  movies.py  reviews.py  users.py
movie_review_app/app/routers/: likes.py  movies.py  reviews.py  users.py
movie_review_app/app/schemas/: likes.py  reviews.py
movie_review_app/app/utils/: auth.py  file.py
project/: pyproject.toml  학습 내용.md
task/: main.py
task/app/models/: movies.py  users.py
task/app/routers/: movies.py  users.py
task/app/schemas/: users.py
task/app/services/: jwt.py
task/app/tests/: test_user_router.py
task_updated/: main.py
task_updated/app/configs/: __init__.py  base.py  database.py
task_updated/app/middleware/: auth.py
task_updated/app/models/: base.py  movies.py  users.py
task_updated/app/routers/: movies.py  users.py
task_updated/app/schemas/: movies.py  users.py
task_updated/app/services/: auth.py
task_updated/app/utils/: auth.py  (+1 more)
test/: calculator.py  delivery.py  pyproject.toml  temp.py  test.ps1  test_delivery.py  test_temp.py
test/tests/: test_calculator.py
